updated requirements and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 # Datasets
 data/
 
+# Multimedia
+.jpg
+.png
+.mp3
+.mp4
+.mov
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
