fix: modified gitignore to accept some images

--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,10 @@
 .vscode/
 
 # Datasets
-data/
+*artist_dataset*
 
-# Multimedia
-*.jpg
-*.png
-*.mp3
-*.mp4
-*.mov
+# Output files
+out/
 
 
 # Byte-compiled / optimized / DLL files
