--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 out/*.pth filter=lfs diff=lfs merge=lfs -text
+out/official/mobilenet/mobilenet.pth filter=lfs diff=lfs merge=lfs -text
+out/official/mobilenet_hog/mobilenet_hog.pth filter=lfs diff=lfs merge=lfs -text
+*.out filter=lfs diff=lfs merge=lfs -text
+*.pth filter=lfs diff=lfs merge=lfs -text
